test: EquipmentReservationWithMemberNumber 사용하지 않는 메서드 제거 및 테스트 추가